--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is New Branch.</h1>
+    <h1>This is an updated branch.</h1>
 
 
     <script src="app.js"></script>
